guestbook/guestbook-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: guestbook
    istio-injection: enabled
  name: guestbook
